--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
-    "rxjs": "~7.4.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.6.7",
+    "rxjs-observable": "0.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
