Current Date added

--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/material": "^13.1.2",
+    "@angular/material-moment-adapter": "^13.1.2",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@types/moment": "^2.13.0",
+    "moment": "^2.29.1",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.6.7",
     "rxjs-observable": "0.0.7",
