--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rxjs-compat": "^6.6.7",
     "rxjs-observable": "0.0.7",
     "tslib": "^2.3.0",
+    "underscore": "^1.13.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
